--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
 </head>
 <body>
 
+<div class="header">
   <h1>SEG Gateway</h1>
   <h2>powered by IRI's Unify</h2>
+</div>
 
-<container id= topLeft>
+<div class="announcements">
+
   <button type="button" id=announcements>Announcements</button>
-    <p> POS model now includes updated regional alignment and the removal of closed stores from SEG's history.</p>
+    <li>POS model now includes updated regional alignment and the removal of closed stores from SEG's history.
+    </li>
+
+</div>
+
+<div class="alerts">
 
   <button type="button" id=alerts> Alerts </button>
-    <p> No alerts.</p>
-</container>
+    <li>No alerts.</li>
+
+</div>
+
 
   <container id=integradedData>
   <h4>Integrated data for new insights and actions.</h4>
@@ -32,7 +42,7 @@
   </container>
 
   <h4> Click on the tiles below for focused business analyses.</h4>
-  
+
   <container id=resources>
     <button type="button" id=fileCabinet> File Cabinet </button>
     <button type="button" id=modelScheduleUpdates> Model Schedule Updates </button>
