--- a/index.html
+++ b/index.html
@@ -13,24 +13,41 @@
   <h2>powered by IRI's Unify</h2>
 </div>
 
-<div class="announcements">
+<div class="container">
 
-  <button type="button" id=announcements>Announcements</button>
-    <li>POS model now includes updated regional alignment and the removal of closed stores from SEG's history.
-    </li>
+  <div class="announcements">
+
+
+    <a href="https://www.google.com" target="_blank">
+      <button id=announcements>Announcements</button>
+    </a>
+
+
+      <li>POS model now includes updated regional alignment and the removal of closed stores from SEG's history.
+      </li>
+
+  </div>
+
+  <div class="alerts">
+
+    <button type="button" id=alerts> Alerts </button>
+      <li>No alerts.</li>
+
+  </div>
+
+
+
+  <div class="photo">
+    <img src="https://i.imgur.com/sbqbDZO.png" alt="">
+  </div>
 
 </div>
 
-<div class="alerts">
-
-  <button type="button" id=alerts> Alerts </button>
-    <li>No alerts.</li>
-
-</div>
 
 
   <container id=integradedData>
-  <h4>Integrated data for new insights and actions.</h4>
+  <h4>Integrated data for new insights and actions.
+  </br> Click on the tiles below for focused business analyses.</h4>
 
     <button type="button" id=categoryManagementTemplates> Category Management Templates</button>
     <button type="button" id=assortment> Assortment </button>
@@ -41,7 +58,6 @@
     *insert Southeastern Grocers logo here *
   </container>
 
-  <h4> Click on the tiles below for focused business analyses.</h4>
 
   <container id=resources>
     <button type="button" id=fileCabinet> File Cabinet </button>
