--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <div class="announcements">
 
 
-    <a href="https://www.google.com" target="_blank">
+    <a href="
+<!-- insert hyperlink here -->
+            " target="_blank">
       <button id=announcements>Announcements</button>
     </a>
 
@@ -30,8 +32,13 @@
 
   <div class="alerts">
 
+    <a href="
+<!-- insert hyperlink here -->
+            " target="_blank">
+
     <button type="button" id=alerts> Alerts </button>
       <li>No alerts.</li>
+    </a>
 
   </div>
 
@@ -49,19 +56,53 @@
   <h4>Integrated data for new insights and actions.
   </br> Click on the tiles below for focused business analyses.</h4>
 
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="button" id=categoryManagementTemplates> Category Management Templates</button>
+  </a>
+
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="button" id=assortment> Assortment </button>
+  </a>
+
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="butotn" id=promotion> Promotion </button>
+  </a>
+
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="button" id=pricing> Pricing </button>
+  </a>
+
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="button" id=businessPerformance> Business Performance </button>
+  </a>
 
     *insert Southeastern Grocers logo here *
   </container>
 
 
   <container id=resources>
+
+    <a href="
+<!-- insert hyperlink here -->
+            " target="_blank">
     <button type="button" id=fileCabinet> File Cabinet </button>
+  </a>
+
+  <a href="
+<!-- insert hyperlink here -->
+          " target="_blank">
     <button type="button" id=modelScheduleUpdates> Model Schedule Updates </button>
+  </a>
   </container>
 
 </body>
