--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="app.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>SEG Gateway</title>
 </head>
 <body>
@@ -57,51 +58,37 @@
   <h4>Integrated data for new insights and actions.
   </br> Click on the tiles below for focused business analyses.</h4>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/unify-seg/storybuilder/storyshell.html#/story?stid=1184" target="_blank">
     <button type="button" id=categoryManagementTemplates> Category Management Templates</button>
   </a>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/IRIFileCabinetSA/FileCabinetServlet?client=seg_ld" target="_blank">
     <button type="button" id=assortment> Assortment </button>
   </a>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/unify-seg/storybuilder/storyshell.html#/story?stid=1047" target="_blank">
     <button type="butotn" id=promotion> Promotion </button>
   </a>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/unify-seg/storybuilder/storyshell.html#/story?stid=1049" target="_blank">
     <button type="button" id=pricing> Pricing </button>
   </a>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/unify-seg/storybuilder/storyshell.html#/story?stid=1309" target="_blank">
     <button type="button" id=businessPerformance> Business Performance </button>
   </a>
 
-    *insert Southeastern Grocers logo here *
+    <img id=logo src="https://i.imgur.com/gWHdqJj.png" alt="Southeastern Grocers logo" height="75px" width="75px" padding-top"20px">
   </container>
 
 
   <container id=resources>
 
-    <a href="
-<!-- insert hyperlink here -->
-            " target="_blank">
+    <a href="https://advantage.iriworldwide.com/IRIFileCabinetSA/FileCabinetServlet?client=seg_ld" target="_blank">
     <button type="button" id=fileCabinet> File Cabinet </button>
   </a>
 
-  <a href="
-<!-- insert hyperlink here -->
-          " target="_blank">
+  <a href="https://advantage.iriworldwide.com/unify-seg/storybuilder/storyshell.html#/story?stid=1184" target="_blank">
     <button type="button" id=modelScheduleUpdates> Model Schedule Updates </button>
   </a>
   </container>
